--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: row;
   /* background: #710193; */
-  background: #03dac5;
+  background: #038f81;
   color: aliceblue;
   justify-content: space-between;
 }
@@ -23,7 +23,7 @@
     flex-direction: row;
     margin-left: 20%;
 } */
-.btn-primary {
+.header .btn-primary {
   background-color: #2e3047;
   border: none;
 }
@@ -36,7 +36,7 @@
   align-items: center;
   font-size: large;
   font-weight: 600;
-  color: #1d1e20;
+  color: whitesmoke;
 }
 
 .header button:hover {
