Added Router and profile

--- a/src/CSS/HomePage.css
+++ b/src/CSS/HomePage.css
@@ -1,4 +1,7 @@
-.main{
-    background-color:#212b38 ;
-  
+.main {
+  background-color: #212b38;
+}
+.home {
+  display: flex;
+  flex-direction: row;
 }
